force-app/main/default/objects/Meal_Ingredient__c/Meal_Ingredient__c.object-meta.xml
<CustomObject>
    <label>Meal Ingredient</label>
    <nameField>
        <displayFormat>MI-{0000}</displayFormat>
        <label>Meal Ingredient Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meal Ingredients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>