force-app/main/default/objects/Meal_Ingredient__c/fields/Estimated_Price__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Price__c</fullName>
    <inlineHelpText>Estimated cost for this ingredient quantity</inlineHelpText>
    <label>Estimated Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>