force-app/main/default/objects/Meal_Ingredient__c/fields/Ingredient_Name__c.field-meta.xml
<CustomField>
    <fullName>Ingredient_Name__c</fullName>
    <label>Ingredient Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>