force-app/main/default/objects/Meal_Ingredient__c/fields/Is_Pantry_Staple__c.field-meta.xml
<CustomField>
    <fullName>Is_Pantry_Staple__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this ingredient is a common pantry staple (salt, pepper, oil, etc.) that is usually always on hand</description>
    <inlineHelpText>Check this if the ingredient is a common staple you usually have in your pantry (e.g., salt, pepper, olive oil, butter, eggs)</inlineHelpText>
    <label>Is Pantry Staple</label>
    <type>Checkbox</type>
</CustomField>