force-app/main/default/objects/Meal_Ingredient__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Additional notes about this ingredient (e.g., &quot;organic&quot;, &quot;fresh&quot;, &quot;low sodium&quot;)</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>